# tap-tiktok

./: pyproject.toml
.github/workflows/: ci_workflow.yml
tap_tiktok/: streams.py  tap.py
